Fix homepage title, decrease text size on small screens

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,3 @@
-:root {
-  --col-yellow: #fff100;
-  --col-grey: #6e6b6a;
-}
-
 @font-face {
   font-family: openSansCondBold;
   src: url(fonts/OpenSansCondensed-Bold.ttf);
@@ -13,10 +8,19 @@
   src: url(fonts/Raleway-ExtraBold.ttf);
 }
 
+:root {
+  --col-yellow: #fff100;
+  --col-grey: #6e6b6a;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 80%;
 }
 
 body {
@@ -83,7 +87,7 @@ a {
   text-align: center;
 }
 
-.contents-entry {
+.main-link {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -104,36 +108,36 @@ a {
   width: 100%;
 }
 
-.entry-number {
+.main-link-number {
   border: 1px solid var(--col-grey);
   margin-right: 0.5rem;
   padding: 0.1rem 0.25rem;
   transition: background-color 0.1s ease-in, color 0.1s ease-in;
 }
 
-.contents-entry:hover .entry-number {
+.main-link:hover .main-link-number {
   background-color: var(--col-grey);
   color: var(--col-yellow);
 }
 
-.entry-title {
+.main-link-title {
   font-family: ralewayBold;
   letter-spacing: 0.2rem;
   transition: letter-spacing 0.15s ease-in;
 }
 
-.contents-entry:hover .entry-title {
+.main-link:hover .main-link-title {
   letter-spacing: 0.3rem;
 }
 
-.entry-line {
+.main-link-line {
   border-bottom: 1px solid var(--col-grey);
   flex: 1;
   margin: 0 0.5rem;
 }
 
-.entry-number,
-.entry-page {
+.main-link-number,
+.main-link-page {
   font-family: openSansCondBold;
   font-size: 90%;
 }
@@ -164,7 +168,14 @@ a {
   color: black;
 }
 
-.entry-btn {
+.nuko {
+  float: right;
+  height: 93px;
+  margin-top: -102px;
+  width: 159px;
+}
+
+/* .entry-btn {
   background-color: var(--col-yellow);
   border:3px solid var(--col-grey);
   color: var(--col-grey);
@@ -180,11 +191,15 @@ a {
   background-color: var(--col-grey);
   border: 3px solid var(--col-grey);
   color: var(--col-yellow);
-}
+} */
 
 @media screen and (min-width: 600px) {
+  html {
+    font-size: 100%;
+  }
+
   .contents-box {
-	width: 600px;
-	padding: 2rem 4rem;
+    width: 600px;
+    padding: 2rem 4rem;
   }
 }
